react props test

--- a/react_props/task_2/dashboard/src/Notifications/Notifications.css
+++ b/react_props/task_2/dashboard/src/Notifications/Notifications.css
@@ -5,10 +5,10 @@
     margin-bottom: 1rem;
 }
 
-[data-notification-type="default"] {
+/* [data-notification-type="default"] {
     color: blue;
   }
 
 [data-notification-type="urgent"] {
 color: red;
-}
+} */
