delete css file

--- a/react_redux-part1/task_0/dashboard/src/components/Footer/Footer.css
+++ b/react_redux-part1/task_0/dashboard/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
-.App-footer {
+/* .App-footer {
     display: flex;
     justify-content: center;
     font-style: italic;
     font-family: sans-serif;
-  }
+  } */
