--- a/Webpack/task_2/css/main.css
+++ b/Webpack/task_2/css/main.css
@@ -6,6 +6,8 @@
 #logo {
     width: 200px;
     height: 200px;
-    background: url('../assets/holberton-logo.jpg');
+    background-image: url('../assets/holberton-logo.jpg');
     background-size: 200px 200px;
 }
+ 
+    
